fix: allow group name and fix onclick label

--- a/packages/pluggableWidgets/checkbox-radio-selection-web/src/ui/CheckboxRadioSelection.scss
+++ b/packages/pluggableWidgets/checkbox-radio-selection-web/src/ui/CheckboxRadioSelection.scss
@@ -2,4 +2,32 @@
 .widget-checkbox-radio-selection {
     display: block;
     position: relative;
+
+    &-readonly {
+        &.widget-checkbox-radio-selection-readonly-text {
+            .widget-checkbox-radio-selection-radio-item {
+                display: none;
+
+                &.widget-checkbox-radio-selection-radio-item-selected {
+                    display: block;
+
+                    input {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+
+    label {
+        font-weight: inherit;
+    }
+
+    input[type="radio"],
+    input[type="checkbox"] {
+        & + label {
+            cursor: pointer;
+            margin-left: var(--spacing-small, 8px);
+        }
+    }
 }
