fix: set minimum width to fill up content on datagrid

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -412,6 +412,7 @@ $root: ".widget-datagrid";
     &-grid {
         &.table {
             display: grid !important;
+            min-width: fit-content;
         }
     }
 
