fix: overriding margin bottom from bootstrap

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -413,6 +413,7 @@ $root: ".widget-datagrid";
         &.table {
             display: grid !important;
             min-width: fit-content;
+            margin-bottom: 0;
         }
     }
 
