chore: update calendar events

--- a/packages/pluggableWidgets/calendar-web/src/ui/Calendar.scss
+++ b/packages/pluggableWidgets/calendar-web/src/ui/Calendar.scss
@@ -22,6 +22,10 @@
 
     .rbc-event {
         min-height: 20px;
+
+        &.rbc-selected {
+            filter: brightness(0.85);
+        }
     }
 
     .rbc-addons-dnd .rbc-addons-dnd-resize-ns-icon {
