refactor(datagrid-web): simplify RefreshIndicator usage

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -432,10 +432,7 @@ $root: ".widget-datagrid";
     &-refresh-container {
         grid-column: 1 / -1;
         padding: 0;
-
-        &--hidden {
-            display: none;
-        }
+        position: relative;
     }
 
     &-refresh-indicator {
