--- a/packages/pluggableWidgets/rich-text-web/src/components/ModalDialog/Dialog.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/components/ModalDialog/Dialog.scss
@@ -144,6 +144,20 @@
     &-content {
         padding: 20px;
         flex: 1;
+
+        &.form-vertical {
+            .form-group {
+                flex-direction: column;
+
+                .col-sm-3,
+                .col-sm-9,
+                .col-sm-12 {
+                    max-width: 100%;
+                    padding-left: 0;
+                    padding-right: 0;
+                }
+            }
+        }
     }
 
     &-footer {
