feat: customize RefreshIndicator to work well on Datagrid and Gallery

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_refresh-indicator.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_refresh-indicator.scss
@@ -2,6 +2,10 @@
     grid-column: 1 / -1;
     padding: 0;
     position: relative;
+
+    &-padding {
+        padding: var(--spacing-small) 0;
+    }
 }
 
 .mx-refresh-indicator {
