--- a/packages/pluggableWidgets/gallery-web/src/ui/GalleryPreview.scss
+++ b/packages/pluggableWidgets/gallery-web/src/ui/GalleryPreview.scss
@@ -1,9 +1,19 @@
-.widget-gallery {
-    .widget-gallery-preview:nth-last-child(2) > div {
-        opacity: 0.5;
-    }
+.widget-gallery-content {
+    position: relative;
+}
 
-    .widget-gallery-preview:last-child > div {
-        opacity: 0.2;
-    }
+.widget-gallery-content::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 33.33%,
+        rgba(255, 255, 255, 0.5) 66.66%,
+        rgba(255, 255, 255, 0.75) 100%
+    );
+    z-index: 1;
 }
