fix: revert combobox input width

--- a/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
+++ b/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
@@ -159,7 +159,7 @@ $cb-skeleton-dark: #d2d2d2;
     }
 
     &-input {
-        color: var(--gray-dark, $cb-gray-dark);
+        color: var(--cb-text-color, --gray-dark, $cb-gray-dark);
         flex-grow: 1;
         border: none;
         padding: 0;
@@ -219,6 +219,7 @@ $cb-skeleton-dark: #d2d2d2;
                 transform: rotate(180deg);
                 transition: transform 0.2s;
             }
+            stroke: var(--cb-text-color);
         }
     }
 
@@ -229,7 +230,7 @@ $cb-skeleton-dark: #d2d2d2;
         cursor: not-allowed;
 
         &-text {
-            color: var(--gray-darker, $cb-typography-color);
+            color: var(--cb-text-color, --gray-darker, $cb-typography-color);
             position: absolute;
             left: 0;
             right: 0;
@@ -243,7 +244,7 @@ $cb-skeleton-dark: #d2d2d2;
         }
 
         &-empty {
-            color: var(--gray-dark, $cb-gray-dark);
+            color: var(--cb-text-color, --gray-dark, $cb-gray-dark);
         }
     }
 
@@ -412,6 +413,18 @@ $cb-skeleton-dark: #d2d2d2;
                 height: 16px;
                 width: 16px;
                 padding: 2.3px;
+            }
+        }
+    }
+}
+
+.hide-bg.form-group .widget-combobox {
+    .widget-combobox {
+        &-input-container {
+            background-color: transparent;
+            border: unset;
+            input {
+                background-color: transparent;
             }
         }
     }
