--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery.scss
@@ -89,7 +89,28 @@ $gallery-screen-md: $screen-md;
     width: inherit;
 }
 
-.widget-gallery-load-more {
+:where(.widget-gallery-footer-controls) {
     display: flex;
-    justify-content: center;
+    flex-flow: row nowrap;
+}
+
+:where(.widget-gallery-fc-start) {
+    margin-block: var(--spacing-medium);
+    padding-inline: var(--spacing-medium);
+}
+
+:where(.widget-gallery-fc-start, .widget-gallery-fc-middle, .widget-gallery-fc-end) {
+    flex-grow: 1;
+    flex-basis: 33.33%;
+    min-height: 20px;
+}
+
+.widget-gallery-clear-selection {
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    text-decoration: underline;
+    color: var(--link-color);
+    padding: 0;
+    display: inline-block;
 }
