--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery-design-properties.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery-design-properties.scss
@@ -33,6 +33,21 @@
     }
 }
 
+.widget-gallery-divided-horizontal {
+    .widget-gallery-item {
+        position: relative;
+        &:not(:last-child)::after {
+            content: "";
+            display: block;
+            position: absolute;
+            left: 0;
+            right: 0;
+            border-bottom: 1px solid var(--grid-border-color, $dg-grid-border-color);
+            margin-top: calc(var(--spacing-small, $dg-spacing-small) / 2);
+        }
+    }
+}
+
 // Hover styles
 .widget-gallery-hover {
     .widget-gallery-items {
