feat(barcode): add logic to use barcodedetector API

--- a/packages/pluggableWidgets/barcode-scanner-web/src/ui/BarcodeScanner.scss
+++ b/packages/pluggableWidgets/barcode-scanner-web/src/ui/BarcodeScanner.scss
@@ -97,6 +97,15 @@
             }
         }
     }
+
+    &.debug {
+        // for debug purposes, we need to determine if barcode scanner is using native or zxing
+        &.mx-barcode-detector {
+            .mx-barcode-scanner-content {
+                border: 4px solid var(--brand-success, #16aa16);
+            }
+        }
+    }
 }
 
 // Overwrite `atlas_core/web/core/_legacy/_mxui.scss` for this particular widget because otherwise
