--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -520,13 +520,24 @@ $root: ".widget-datagrid";
     margin: 0 auto;
 }
 
-:where(.widget-datagrid-grid.infinite-loading) {
+.infinite-loading.widget-datagrid-grid-body {
+    // when virtual scroll is enabled we make area that holds rows scrollable
+    // (while the area that holds column headers still stays in place)
     overflow-y: auto;
 }
 
-:where(.infinite-loading .widget-datagrid-grid-head .th) {
-    position: sticky;
-    z-index: 1;
+.widget-datagrid-grid-head,
+.widget-datagrid-grid-body {
+    // this element has to position their children (columns or headers)
+    // as grid and have those aligned with the parent grid
+    display: grid;
+    // this property makes sure we align our own grid columns
+    // to the columns defined in the global grid
+    grid-template-columns: subgrid;
+
+    // ensure that we cover all columns of original top level grid
+    // so our own columns get aligned with the parent
+    grid-column: 1 / -1;
 }
 
 :where(#{$root}-paging-bottom) {
