chore: data widget scss css variables cleanup

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/main.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/main.scss
@@ -1,4 +1,5 @@
 @import "../../../theme/web/custom-variables";
+@import "variables";
 @import "datagrid";
 @import "datagrid-filters";
 @import "datagrid-dropdown-filter";
