--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery-design-properties.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery-design-properties.scss
@@ -7,14 +7,14 @@
 // All borders
 .widget-gallery-bordered-all {
     .widget-gallery-item {
-        border: 1px solid var(--grid-border-color, $dg-grid-border-color);
+        border: 1px solid var(--grid-border-color, $grid-border-color);
     }
 }
 
 // Vertical borders
 .widget-gallery-bordered-vertical {
     .widget-gallery-item {
-        border-color: var(--grid-border-color, $dg-grid-border-color);
+        border-color: var(--grid-border-color, $grid-border-color);
         border-style: solid;
         border-width: 0;
         border-left-width: 1px;
@@ -25,7 +25,7 @@
 // Horizontal orders
 .widget-gallery-bordered-horizontal {
     .widget-gallery-item {
-        border-color: var(--grid-border-color, $dg-grid-border-color);
+        border-color: var(--grid-border-color, $grid-border-color);
         border-style: solid;
         border-width: 0;
         border-top-width: 1px;
@@ -42,8 +42,8 @@
             position: absolute;
             left: 0;
             right: 0;
-            border-bottom: 1px solid var(--grid-border-color, $dg-grid-border-color);
-            margin-top: calc(var(--spacing-small, $dg-spacing-small) / 2);
+            border-bottom: 1px solid var(--grid-border-color, $grid-border-color);
+            margin-top: calc(var(--spacing-small, $spacing-small) / 2);
         }
     }
 }
@@ -52,7 +52,7 @@
 .widget-gallery-hover {
     .widget-gallery-items {
         .widget-gallery-item:hover {
-            background-color: var(--grid-bg-hover, $dg-grid-bg-hover);
+            background-color: var(--grid-bg-hover, $grid-bg-hover);
         }
     }
 }
@@ -60,7 +60,7 @@
 // Striped styles
 .widget-gallery-striped {
     .widget-gallery-item:nth-child(odd) {
-        background-color: var(--grid-bg-striped, $dg-grid-bg-striped);
+        background-color: var(--grid-bg-striped, $grid-bg-striped);
     }
     .widget-gallery-item:nth-child(even) {
         background-color: #fff;
@@ -77,21 +77,21 @@
 // Grid spacing small
 .widget-gallery.widget-gallery-gridgap-small {
     .widget-gallery-items {
-        gap: var(--spacing-small, $dg-spacing-small);
+        gap: var(--spacing-small, $spacing-small);
     }
 }
 
 // Grid spacing medium
 .widget-gallery.widget-gallery-gridgap-medium {
     .widget-gallery-items {
-        gap: var(--spacing-medium, $dg-spacing-medium);
+        gap: var(--spacing-medium, $spacing-medium);
     }
 }
 
 // Grid spacing large
 .widget-gallery.widget-gallery-gridgap-large {
     .widget-gallery-items {
-        gap: var(--spacing-large, $dg-spacing-large);
+        gap: var(--spacing-large, $spacing-large);
     }
 }
 
