--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery.scss
@@ -25,7 +25,7 @@ $gallery-screen-md: $screen-md;
 .widget-gallery {
     .widget-gallery-items {
         display: grid;
-        grid-gap: var(--spacing-small, $dg-spacing-small);
+        grid-gap: var(--spacing-small, $spacing-small);
 
         /*
          Desktop widths
@@ -57,14 +57,14 @@ $gallery-screen-md: $screen-md;
         }
 
         &:focus-visible {
-            outline: 1px solid var(--brand-primary, $dg-brand-primary);
+            outline: 1px solid var(--brand-primary, $brand-primary);
             outline-offset: -1px;
         }
     }
 
     &:not(.widget-gallery-disable-selected-items-highlight) {
         .widget-gallery-item.widget-gallery-clickable.widget-gallery-selected {
-            background: $dg-brand-light;
+            background: $brand-light;
         }
     }
 
