feat: use css variable

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -589,7 +589,7 @@ $root: ".widget-datagrid";
 
     &:hover,
     &:focus-visible {
-        background-color: #e6e7f2;
+        background-color: var(--brand-primary-50, #e6e7f2);
     }
 }
 
