--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -489,10 +489,7 @@ $root: ".widget-datagrid";
 
     &-spinner {
         justify-content: center;
-
-        &-full-width {
-            width: 100%;
-        }
+        width: 100%;
 
         &-margin {
             margin: 52px 0;
@@ -578,7 +575,7 @@ $root: ".widget-datagrid";
     align-items: center;
 }
 
-#{$root}-btn-invisible {
+#{$root}-btn-link {
     cursor: pointer;
     background: transparent;
     border: none;
