feat: add break tag and fix focus and keyboard behavior

--- a/packages/pluggableWidgets/rich-text-web/src/ui/RichText.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/ui/RichText.scss
@@ -101,6 +101,11 @@ $rte-brand-primary: #264ae5;
         position: relative;
         text-transform: none;
         justify-content: end;
+
+        &.hide-status-bar {
+            border-top: none;
+            height: 0;
+        }
     }
 
     &.editor-readPanel {
